added and modified files

--- a/html/features.html
+++ b/html/features.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
-	<html>
-	<title>Особенности</title>
-	
-	<head>
-	  <meta charset="utf-8">
-	  <link rel="stylesheet" href="css/stylesheet.css">
-	</head>
-	
-	<body>
-	  <div class="navigation">
-	    <a href="/">Главная | </a>
-	    <a href="/features" class="features">Особенности | </a>
-	    <a href="/news">Новости | </a>
-	  </div>
-	
-	  <h1>Особенности</h1>
-	  <p>лучшая платформа для заметок</p>
-	</body>
-	
-	</html>
+<html>
+<title>Особенности</title>
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/stylesheet.css">
+</head>
+
+<body>
+  <div class="navigation">
+    <a href="/">Главная | </a>
+    <a href="/features" class="features">Особенности | </a>
+    <a href="/news">Новости | </a>
+    <a href="/my_notes">Мои заметки | </a>
+    <a href="/new_user" id="user">Новый пользователь</a>
+  </div>
+  
+  <h1>Особенности</h1>
+  <p>лучшая платформа для заметок</p>
+</body>
+
+</html>
