--- a/html/features.html
+++ b/html/features.html
@@ -9,11 +9,11 @@
 
 <body>
   <div class="navigation">
-    <a href="/">Главная | </a>
-    <a href="/features" class="features">Особенности | </a>
-    <a href="/news">Новости | </a>
-    <a href="/my_notes">Мои заметки | </a>
-    <a href="/new_user" id="user">Новый пользователь</a>
+    <a href="/main.html">Главная | </a>
+    <a href="/features.html" class="features">Особенности | </a>
+    <a href="/news.html">Новости | </a>
+    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/new_user.html" id="user">Новый пользователь</a>
   </div>
   
   <h1>Особенности</h1>
