--- a/html/main.html
+++ b/html/main.html
@@ -9,11 +9,11 @@
 
 <body>
   <div class="navigation">
-    <a href="/" class="home">Главная | </a>
-    <a href="/features">Особенности | </a>
-    <a href="/news">Новости | </a>
-    <a href="/my_notes">Мои заметки | </a>
-    <a href="/new_user" id="user">Новый пользователь</a>
+    <a href="/main.html" class="home">Главная | </a>
+    <a href="/features.html">Особенности | </a>
+    <a href="/news.html">Новости | </a>
+    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/new_user.html" id="user">Новый пользователь</a>
   </div>
   
   <h1>Храните ваши заметки у нас. Легко и просто</h1>
