--- a/html/new_note.html
+++ b/html/new_note.html
@@ -9,11 +9,11 @@
 
 <body>
   <div class="navigation">
-    <a href="/">Главная | </a>
-    <a href="/features">Особенности | </a>
-    <a href="/news">Новости | </a>
-    <a href="/my_notes" class="myNotes">Мои заметки | </a>
-    <a href="/new_user" id="user">Новый пользователь</a>
+    <a href="/main.html">Главная | </a>
+    <a href="/features.html">Особенности | </a>
+    <a href="/news.html">Новости | </a>
+    <a href="/my_notes.html" class="myNotes">Мои заметки | </a>
+    <a href="/new_user.html" id="user">Новый пользователь</a>
   </div>
   
   <form action="" method="POST">
