--- a/html/new_user.html
+++ b/html/new_user.html
@@ -11,11 +11,11 @@
 <body>
   
   <div class="navigation">
-    <a href="/">Главная | </a>
-    <a href="/features">Особенности | </a>
-    <a href="/news">Новости | </a>
-    <a href="/my_notes">Мои заметки | </a>
-    <a href="/new_user" class="newUser" id="user">Новый пользователь</a>
+    <a href="/main.html">Главная | </a>
+    <a href="/features.html">Особенности | </a>
+    <a href="/news.html">Новости | </a>
+    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/new_user.html" class="newUser" id="user">Новый пользователь</a>
   </div>
   
 
