--- a/html/news.html
+++ b/html/news.html
@@ -9,11 +9,11 @@
 
 <body>
   <div class="navigation">
-    <a href="/">Главная | </a>
-    <a href="/features">Особенности | </a>
-    <a href="/news" class="news">Новости | </a>
-    <a href="/my_notes">Мои заметки | </a>
-    <a href="/new_user">Новый пользователь</a>
+    <a href="/main.html">Главная | </a>
+    <a href="/features.html">Особенности | </a>
+    <a href="/news.html" class="news">Новости | </a>
+    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/new_user.html">Новый пользователь</a>
   </div>
   
   <h1>Новости</h1>
