added 2 html files and some little changes

--- a/html/my_notes.html
+++ b/html/my_notes.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <div class="navigation">
-        <a href="/main.html">Главная | </a>
-        <a href="/features.html">Особенности | </a>
-        <a href="/news.html">Новости | </a>
-        <a href="/my_notes.html" class="myNotes">Мои заметки | </a>
+        <a href="/main.html">Главная </a>| 
+        <a href="/features.html">Особенности </a>| 
+        <a href="/news.html">Новости </a>| 
+        <a href="/my_notes.html" class="myNotes">Мои заметки </a>| 
         <a href="/new_user.html" id="user">Новый пользователь</a>
       </div>
       
