--- a/html/new_user.html
+++ b/html/new_user.html
@@ -11,10 +11,10 @@
 <body>
   
   <div class="navigation">
-    <a href="/main.html">Главная | </a>
-    <a href="/features.html">Особенности | </a>
-    <a href="/news.html">Новости | </a>
-    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/main.html">Главная </a>| 
+    <a href="/features.html">Особенности </a>| 
+    <a href="/news.html">Новости </a>| 
+    <a href="/my_notes.html">Мои заметки </a>| 
     <a href="/new_user.html" class="newUser" id="user">Новый пользователь</a>
   </div>
   
@@ -34,7 +34,9 @@
     <input type="text" size="40" id="email" name="email" placeholder="vasya_pupkin@yandex.ru">
     <p>Номер мобильного телефона</p>
     <input type="date" size="40" id="mobileNumber" name="mobileNumber" maxlength="12" placeholder="+79999999999">
-    <p><input type="submit" value="Отправить данные" id="submit"></p>
+    <p><input type="submit" value="Отправить данные" id="submit">
+    <input type="reset" value="Очистить">
+    </p>
   </form>
 </body>
 
