--- a/html/news.html
+++ b/html/news.html
@@ -9,10 +9,10 @@
 
 <body>
   <div class="navigation">
-    <a href="/main.html">Главная | </a>
-    <a href="/features.html">Особенности | </a>
-    <a href="/news.html" class="news">Новости | </a>
-    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/main.html">Главная </a>| 
+    <a href="/features.html">Особенности </a>| 
+    <a href="/news.html" class="news">Новости </a>| 
+    <a href="/my_notes.html">Мои заметки </a>| 
     <a href="/new_user.html">Новый пользователь</a>
   </div>
   
