--- a/html/main.html
+++ b/html/main.html
@@ -9,10 +9,10 @@
 
 <body>
   <div class="navigation">
-    <a href="/main.html" class="home">Главная | </a>
-    <a href="/features.html">Особенности | </a>
-    <a href="/news.html">Новости | </a>
-    <a href="/my_notes.html">Мои заметки | </a>
+    <a href="/main.html" class="home">Главная </a>| 
+    <a href="/features.html">Особенности </a>| 
+    <a href="/news.html">Новости </a>| 
+    <a href="/my_notes.html">Мои заметки </a>| 
     <a href="/new_user.html" id="user">Новый пользователь</a>
   </div>
   
