--- a/html/menu.html
+++ b/html/menu.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE  HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
-<title>Особенности</title>
 
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
+
 
 <body>
   <div class="navigation">
@@ -15,9 +15,3 @@
     <a href="/my_notes.html">Мои заметки </a>|
     <a href="/new_user.html" id="user">Новый пользователь</a>
   </div>
-
-  <h1>Особенности</h1>
-  <p>лучшая платформа для заметок</p>
-</body>
-
-</html>
