--- a/html/new_note.html
+++ b/html/new_note.html
@@ -9,10 +9,10 @@
 
 <body>
   <div class="navigation">
-    <a href="/main.html">Главная | </a>
-    <a href="/features.html">Особенности | </a>
-    <a href="/news.html">Новости | </a>
-    <a href="/my_notes.html" class="myNotes">Мои заметки | </a>
+    <a href="/main.html">Главная </a>| 
+    <a href="/features.html">Особенности </a>| 
+    <a href="/news.html">Новости </a>| 
+    <a href="/my_notes.html" class="myNotes">Мои заметки </a>| 
     <a href="/new_user.html" id="user">Новый пользователь</a>
   </div>
   
@@ -25,6 +25,7 @@
     </textarea>
     <br>
     <input type="submit" value="Добавить запись">
+    <input type="reset" value="Очистить">
   </form>
 </body>
 
