--- a/html/features.html
+++ b/html/features.html
@@ -8,14 +8,7 @@
 </head>
 
 <body>
-  <div class="navigation">
-    <a href="/main.html">Главная </a>|
-    <a href="/features.html" class="features">Особенности </a>|
-    <a href="/news.html">Новости </a>|
-    <a href="/my_notes.html">Мои заметки </a>|
-    <a href="/new_user.html" id="user">Новый пользователь</a>
-  </div>
-
+  <object type="text/html" data="menu.html" class="navigation"></object>
   <h1>Особенности</h1>
   <p>лучшая платформа для заметок</p>
 </body>
