--- a/html/my_notes.html
+++ b/html/my_notes.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
 <html>
 <title>Мои заметки</title>
+
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
+
 <body>
-    <div class="navigation">
-        <a href="/main.html">Главная </a>| 
-        <a href="/features.html">Особенности </a>| 
-        <a href="/news.html">Новости </a>| 
-        <a href="/my_notes.html" class="myNotes">Мои заметки </a>| 
-        <a href="/new_user.html" id="user">Новый пользователь</a>
-      </div>
-      
-      <a href="/new_note.html">Создать новую заметку</a>
+  <object type="text/html" data="menu.html" class="navigation"></object>
+  <h1>Мои заметки</h1>
+  <a href="/new_note.html">Создать новую заметку</a>
 </body>
 
 </html>
