--- a/html/new_note.html
+++ b/html/new_note.html
@@ -8,14 +8,7 @@
 </head>
 
 <body>
-  <div class="navigation">
-    <a href="/main.html">Главная </a>| 
-    <a href="/features.html">Особенности </a>| 
-    <a href="/news.html">Новости </a>| 
-    <a href="/my_notes.html" class="myNotes">Мои заметки </a>| 
-    <a href="/new_user.html" id="user">Новый пользователь</a>
-  </div>
-  
+  <object type="text/html" data="menu.html" class="navigation"></object>
   <form action="" method="POST">
     Новая заметка
     <p>Название</p>
