--- a/html/new_user.html
+++ b/html/new_user.html
@@ -7,18 +7,9 @@
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
-
 <body>
-  
-  <div class="navigation">
-    <a href="/main.html">Главная </a>| 
-    <a href="/features.html">Особенности </a>| 
-    <a href="/news.html">Новости </a>| 
-    <a href="/my_notes.html">Мои заметки </a>| 
-    <a href="/new_user.html" class="newUser" id="user">Новый пользователь</a>
-  </div>
-  
-
+  <object type="text/html" data="menu.html" class="navigation"></object>
+  <h1>Новый пользователь</h1>
   <form action="" method="POST">
     <p>Имя пользователя <span class="star">*</span></p>
     <input type="text" size=40 id="userName" name="userName" placeholder="никнейм">
