--- a/html/main.html
+++ b/html/main.html
@@ -7,17 +7,12 @@
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
-<body>
-  <div class="navigation">
-    <a href="/main.html" class="home">Главная </a>| 
-    <a href="/features.html">Особенности </a>| 
-    <a href="/news.html">Новости </a>| 
-    <a href="/my_notes.html">Мои заметки </a>| 
-    <a href="/new_user.html" id="user">Новый пользователь</a>
-  </div>
-  
-  <h1>Храните ваши заметки у нас. Легко и просто</h1>
 
+
+<body>
+  <object type="text/html" data="menu.html" class="navigation"></object>
+  <h1>Храните ваши заметки у нас. Легко и просто</h1>
 </body>
+
 
 </html>
