--- a/html/menu.html
+++ b/html/menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -6,12 +6,14 @@
   <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
-
 <body>
-  <div class="navigation">
-    <a href="/main.html">Главная </a>|
-    <a href="/features.html" class="features">Особенности </a>|
-    <a href="/news.html">Новости </a>|
-    <a href="/my_notes.html">Мои заметки </a>|
-    <a href="/new_user.html" id="user">Новый пользователь</a>
+  <div>
+    <a id="main" href="/" target="_parent" >Главная </a>|
+    <a href="/features.html" target="_parent" id="features">Особенности </a>|
+    <a href="/news.html" target="_parent" id="news">Новости </a>|
+    <a href="/my_notes.html" target="_parent" id="myNotes">Мои заметки </a>|
+    <a href="/new_user.html" target="_parent" id="newUser">Новый пользователь</a>
   </div>
+</body>
+
+</html>
