--- a/html/news.html
+++ b/html/news.html
@@ -8,16 +8,10 @@
 </head>
 
 <body>
-  <div class="navigation">
-    <a href="/main.html">Главная </a>| 
-    <a href="/features.html">Особенности </a>| 
-    <a href="/news.html" class="news">Новости </a>| 
-    <a href="/my_notes.html">Мои заметки </a>| 
-    <a href="/new_user.html">Новый пользователь</a>
-  </div>
-  
+    <object type="text/html" data="menu.html" class="navigation"></object>
   <h1>Новости</h1>
   <p>пока ничего нового</p>
+
 </body>
 
 </html>
