added simple login

--- a/html/features.html
+++ b/html/features.html
@@ -14,7 +14,8 @@
         <a href="/features.html" id="features">Особенности </a>|
         <a href="/news.html">Новости </a>|
         <a href="/my_notes.html">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь</a>
+        <a href="/new_user.html">Новый пользователь </a>|
+        <a href="/login.html">Вход</a>
       </div>
   <h1>Особенности</h1>
   <p>лучшая платформа для заметок</p>
