--- a/html/main.html
+++ b/html/main.html
@@ -14,7 +14,8 @@
         <a href="/features.html">Особенности </a>|
         <a href="/news.html">Новости </a>|
         <a href="/my_notes.html">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь</a>
+        <a href="/new_user.html">Новый пользователь</a>|
+        <a href="/login.html">Вход</a>
       </div>
   <h1>Храните ваши заметки у нас. Легко и просто</h1>
 </body>
