--- a/html/my_notes.html
+++ b/html/my_notes.html
@@ -13,7 +13,8 @@
         <a href="/features.html">Особенности </a>|
         <a href="/news.html">Новости </a>|
         <a href="/my_notes.html" id="myNotes">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь</a>
+        <a href="/new_user.html">Новый пользователь</a>|
+        <a href="/login.html">Вход</a>
       </div>
   <h1>Мои заметки</h1>
   <a href="/new_note.html">Создать новую заметку</a>
