--- a/html/new_note.html
+++ b/html/new_note.html
@@ -10,13 +10,18 @@
   <form action="" method="POST">
     Новая заметка
     <p>Название</p>
-    <input type="text" name="noteName">
+    <input type="text" name="noteName" required autofocus>
     <p>Текст</p>
-    <textarea cols="100" rows="20" name="noteText"></textarea>
+    <textarea cols="100" rows="20" name="noteText" resize="false" required></textarea>
     </textarea>
     <br>
     <input type="submit" value="Добавить запись">
     <input type="reset" value="Очистить">
+    <br>
+    <a href="/">на главную</a>
+    <br>
+    <a href="/my_notes.html">вернуться к моим заметкам</a>
+    <div id="return"></div>
   </form>
 </body>
 
