--- a/html/news.html
+++ b/html/news.html
@@ -13,7 +13,8 @@
         <a href="/features.html">Особенности </a>|
         <a href="/news.html" id="news">Новости </a>|
         <a href="/my_notes.html">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь</a>
+        <a href="/new_user.html">Новый пользователь</a>|
+        <a href="/login.html">Вход</a>
       </div>
   <h1>Новости</h1>
   <p>пока ничего нового</p>
