save little changes

--- a/html/my_notes.html
+++ b/html/my_notes.html
@@ -10,11 +10,11 @@
 <body>
     <div class="navigation">
         <a href="/">Главная </a>|
-        <a href="/features.html">Особенности </a>|
+        <a href="/features">Особенности </a>|
         <a href="/news.html">Новости </a>|
-        <a href="/my_notes.html" id="myNotes">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь</a>|
-        <a href="/login.html">Вход</a>
+        <a href="/my_notes" id="myNotes">Мои заметки </a>|
+        <a href="/new_user">Новый пользователь</a>|
+        <a href="/login">Вход</a>
       </div>
   <h1>Мои заметки</h1>
   <a href="/new_note.html">Создать новую заметку</a>
