--- a/html/new_note.html
+++ b/html/new_note.html
@@ -20,8 +20,7 @@
     <br>
     <a href="/">на главную</a>
     <br>
-    <a href="/my_notes.html">вернуться к моим заметкам</a>
-    <div id="return"></div>
+    <a href="/my_notes">вернуться к моим заметкам</a>
   </form>
 </body>
 
