--- a/html/features.html
+++ b/html/features.html
@@ -6,17 +6,10 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/stylesheet.css">
+  <script type="text/javascript" src="mustache.js"></script>
 </head>
-
 <body>
-    <div class="navigation">
-        <a href="/">Главная </a>|
-        <a href="/features.html" id="features">Особенности </a>|
-        <a href="/news.html">Новости </a>|
-        <a href="/my_notes.html">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь </a>|
-        <a href="/login.html">Вход</a>
-      </div>
+  {{> navigation}}
   <h1>Особенности</h1>
   <p>лучшая платформа для заметок</p>
 </body>
