--- a/html/main.html
+++ b/html/main.html
@@ -11,11 +11,11 @@
 <body>
     <div class="navigation">
         <a href="/" id="main">Главная </a>|
-        <a href="/features.html">Особенности </a>|
-        <a href="/news.html">Новости </a>|
-        <a href="/my_notes.html">Мои заметки </a>|
-        <a href="/new_user.html">Новый пользователь</a>|
-        <a href="/login.html">Вход</a>
+        <a href="/features">Особенности </a>|
+        <a href="/news">Новости </a>|
+        <a href="/my_notes">Мои заметки </a>|
+        <a href="/new_user">Новый пользователь</a>|
+        <a href="/login">Вход</a>
       </div>
   <h1>Храните ваши заметки у нас. Легко и просто</h1>
 </body>
