--- a/html/new_user.html
+++ b/html/new_user.html
@@ -10,11 +10,11 @@
 <body>
     <div class="navigation">
         <a href="/">Главная </a>|
-        <a href="/features.html">Особенности </a>|
-        <a href="/news.html">Новости </a>|
-        <a href="/my_notes.html">Мои заметки </a>|
-        <a href="/new_user.html" id="newUser">Новый пользователь</a>|
-        <a href="/login.html">Вход</a>
+        <a href="/features">Особенности </a>|
+        <a href="/news">Новости </a>|
+        <a href="/my_notes">Мои заметки </a>|
+        <a href="/new_user" id="newUser">Новый пользователь</a>|
+        <a href="/login">Вход</a>
       </div>
   <h1>Новый пользователь</h1>
   <form action="" method="POST">
